--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  padding: 50px 0px;
+  display: flex;
+  justify-content: center;
+  position: relative;
   min-height: 100vh;
+}
+
+.App{
+  width: 500px;
+}
+
+
+.todosCont{
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 30px;
+  row-gap: 17px;
+  padding-bottom: 80px;
 }
 
-.App-link {
-  color: #61dafb;
+.contHead{
+  font-size: 30px;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.noTodos{
+  font-size: 17px;
+  font-weight: 600;
+  color: rgb(221, 59, 30);
+  padding-left: 19px;
+}
+
+@media only screen and (max-width: 500px){
+  .App{
+    width: 100vw;
   }
-  to {
-    transform: rotate(360deg);
+
+  .contHead{
+    padding-left: 10px;
   }
 }
